chore(index): add footer

--- a/code_guesser_game/templates/index.html
+++ b/code_guesser_game/templates/index.html
@@ -17,6 +17,10 @@
         <button id="next-button" style="display: none;">Další</button>
     </div>
 
+    <footer>
+        <p>Created by Motolský Ajťáci</p>
+    </footer>
+
     <script src="/static/script.js"></script>
 </body>
 </html>
