--- a/code_guesser_game/templates/index.html
+++ b/code_guesser_game/templates/index.html
@@ -13,7 +13,7 @@
 
   <!-- Your main stylesheet -->
   <link rel="stylesheet" href="/static/style.css">
-  <link rel="icon" href="/static/images/icon.gif" type="image/gif">
+  <link rel="icon" href="/static/images/icon.png" type="image/png">
 </head>
 <body>
   <button id="theme-toggle" aria-label="Přepnout režim">
