--- a/code_guesser_game/templates/index.html
+++ b/code_guesser_game/templates/index.html
@@ -2,12 +2,13 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
-  <title>Uhádni Programovací Jazyk</title>
+  <title>SPŠD - Uhádni Prg. Jazyk</title>
 
   <!-- Responsive viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CodeMirror CSS & a theme (e.g., "material") -->
+   ico
   <link 
     rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/codemirror.min.css" 
@@ -16,7 +17,7 @@
     rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/theme/material.min.css" 
   />
-
+  <link rel="icon" href="/static/icon.png" type="image/png">
   <!-- Our own stylesheet -->
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
