--- a/code_guesser_game/templates/index.html
+++ b/code_guesser_game/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>SPŠD - Uhádni PRG Jazyk</title>
+  <title>SPŠD - Uhádni Programovací Jazyk</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CodeMirror CSS & Theme -->
