chore(index): footer edit

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <footer>
-      <p>Spráskáno ve škole v učebně 4 &copy; 2025 Motolský Ajťáci</p>
+      <p>Spráskáno v učebně 4 &copy; 2025 Motolský Ajťáci</p>
     </footer>
   </div>
 </body>
