--- a/templates/coming_soon.html
+++ b/templates/coming_soon.html
@@ -8,8 +8,10 @@
     <link rel="icon" href="/static/images/icon.png" type="image/png">
 </head>
 <body>
+    <!-- Container for Content -->
     <div class="container">
         <h1>Coming Soon...</h1>
+        <p>Something amazing is on its way. Stay tuned!</p>
         <a href="/" class="home-button">Zpět</a>
     </div>
 </body>
