--- a/templates/code_guesser.html
+++ b/templates/code_guesser.html
@@ -17,8 +17,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <button id="theme-toggle" aria-label="Přepnout režim">
-    <i class="fas fa-sun"></i>
+  <button id="home-button" aria-label="Domů" onclick="window.location.href='/'">
+    <i class="fas fa-home"></i>
   </button>
 
   <div class="game-container">
