--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header class="topbar">
     <div class="brand">
-      <img src="/static/images/icon.png" alt="Logo" class="logo">
+      <img src="/static/images/icon.webp" alt="Logo" class="logo">
       <h1 class="site-title">Hlavní Menu</h1>
     </div>
   </header>
@@ -19,14 +19,14 @@
   <!-- Main Content -->
   <main class="cover-grid">
     <!-- Cover 1 -->
-    <a class="cover-block" href="/coming_soon" style="--bg-url: url('/static/images/games/mhd_guesser.jpg');">
+    <a class="cover-block" href="/coming_soon" style="--bg-url: url('/static/images/games/mhd_guesser.webp');">
       <div class="cover-overlay"></div>
       <div class="cover-text">
         <h2>MHD Guesser</h2>
       </div>
     </a>
     <!-- Cover 2 -->
-    <a class="cover-block" href="/code_guesser" style="--bg-url: url('/static/images/games/code_guesser.jpg');">
+    <a class="cover-block" href="/code_guesser" style="--bg-url: url('/static/images/games/code_guesser.webp');">
       <div class="cover-overlay"></div>
       <div class="cover-text">
         <h2>Code Guesser</h2>
@@ -34,7 +34,7 @@
     </a>
 
     <!-- Cover 3 -->
-    <a class="cover-block" href="/coming_soon" style="--bg-url: url('/static/images/games/coming_soon.jpg');">
+    <a class="cover-block" href="/coming_soon" style="--bg-url: url('/static/images/games/coming_soon.webp');">
       <div class="cover-overlay"></div>
       <div class="cover-text">
         <h2>Již Brzy...</h2>
